--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "mongoose": "^8.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin-js": "^2.6.1",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
